syntax = "proto3";

package roothash;
option go_package = "github.com/oasislabs/ekiden/go/grpc/roothash";

service RootHash {
  rpc GetLatestBlock (LatestBlockRequest) returns (LatestBlockResponse) {}
  rpc GetBlocks (BlockRequest) returns (stream BlockResponse) {}
}

message Block {
  Header header = 1;
}

message Nonce {
  bytes data = 1;
}

message Header {
  uint32 version = 1;
  bytes namespace = 2;
  // Legacy round was here with id 3.
  uint64 timestamp = 4;
  uint32 header_type = 5;
  bytes previous_hash = 6;
  bytes group_hash = 7;
  // Input hash was here with id 8.
  // Output hash was here with id 9.
  bytes state_root = 10;
  bytes commitments_hash = 11;

  bytes storage_receipt = 12;

  uint64 round = 13;
  // Tag hash was here with id 14.
  bytes io_root = 15;
}

message LatestBlockRequest {
  bytes runtime_id = 1;
}

message LatestBlockResponse {
  Block block = 1;
}

message BlockRequest {
  bytes runtime_id = 1;
}

message BlockResponse {
  Block block = 1;
}
